# key-value-database

./: .gitignore  CMakeLists.txt
cmd/: CMakeLists.txt  main.cpp
src/: database.cpp  handmade.h
src/handmade/: handmade_alignedSerialization.h  handmade_errorHandle.h  handmade_serialization.h  handmade_walProtocol.h
src/thread_management/: handmande_threadpool.h
